# edl-losses

./: .gitignore  LICENSE  README.md  examples.ipynb  main.py  pyproject.toml
.github/workflows/: release.yaml
examples/: edl.py  fedl.py  gen.py  lenet.py
src/edl_losses/: __init__.py  edl.py  fedl.py  gen.py  util.py
tests/: test_edl.py  test_fedl.py  test_gen.py
